--- a/Part3-Large_Growth_Fund_Category-Financial_Analysis.ipynb
+++ b/Part3-Large_Growth_Fund_Category-Financial_Analysis.ipynb
@@ -19,7 +19,7 @@
     "1. Average volume of shares or index funds' units traded with respect to time<br />\n",
     "2. Highest/Lowest/Open index fund prices traded with respect to time<br />\n",
     "3. Market Capitalization<br />\n",
-    "4. Trends using moving averages - Do share's tend to increase in the long term?<br />\n",
+    "4. Trends using moving averages - Do shares tend to increase in the long term?<br />\n",
     "5. Stock Returns & Volatility - for Annualized & Daily Returns<br />\n",
     "6. Correlation<br />\n",
     "\n",
