--- a/Part1-Large_Blend_Fund_Category-Financial_Analysis.ipynb
+++ b/Part1-Large_Blend_Fund_Category-Financial_Analysis.ipynb
@@ -19,7 +19,7 @@
     "1. Average volume of shares or index funds' units traded with respect to time<br />\n",
     "2. Highest/Lowest/Open index fund prices traded with respect to time<br />\n",
     "3. Market Capitalization<br />\n",
-    "4. Trends using moving averages - Do shares tend to increase in the long term?<br />\n",
+    "4. Trends using moving averages - Do share prices tend to increase in the long term?<br />\n",
     "5. Stock Returns & Volatility - for Annualized & Daily Returns<br />\n",
     "6. Correlation<br />\n",
     "\n",
@@ -2001,11 +2001,11 @@
    "source": [
     "# Conclusion - What Should I Invest In?\n",
     "\n",
-    "Due that the 4 ETFs have low volatility, favorable trend patterns (upward - increasing value as time passes), & overrall low risk / great return ratio, any of these stocks would be worth buying and holding for many years. The only exception would be SPY. The reason being that it has the highest expense ratio among the 4 ETFs, despite having slightly better returns - on the long term, a high expense ratio is an important variable to keep in mind as as a passive investor looking for long-term growth.\n",
+    "Due that the 4 ETFs have low volatility, favorable trend patterns (upward - increasing value as time passes), & overall low risk / great return ratio, any of these stocks would be worth buying and holding for many years. The only exception would be SPY. The reason being that it has the highest expense ratio among the 4 ETFs, despite having slightly better returns - on the long term, a high expense ratio is an important variable to keep in mind as as a passive investor looking for long-term growth.\n",
     "\n",
     "As we noticed VOO & IVV follow an IDENTICAL price (open, high, low) therefore investing in either one won't make any difference and the same applies for long-term returns. Among VOO/IVV (both S&P 500 ETFs) & VTI (Total Stock Market), VTI has slightly more volatility, therefore IVV or VOO are less riskier investment options. Note that IVV, VOO & VTI have low expense-ratios (which is essential for 'buying & holding' strategies).\n",
     "\n",
-    "Note that when it comes to trending directions, since these 4 ETFs are highly correlated, this will move upward or downward depending on the economy (meaning that if there's a downturn - all of these will fall at the same time)."
+    "Note that when it comes to trending directions, since these 4 ETFs are highly correlated, these will move upward or downward depending on the economy (meaning that if there's a downturn - all of these will fall at the same time)."
    ]
   },
   {
