--- a/Part2-Large_Value_Fund_Category-Financial_Analysis.ipynb
+++ b/Part2-Large_Value_Fund_Category-Financial_Analysis.ipynb
@@ -19,7 +19,7 @@
     "1. Average volume of shares or index funds' units traded with respect to time<br />\n",
     "2. Highest/Lowest/Open index fund prices traded with respect to time<br />\n",
     "3. Market Capitalization<br />\n",
-    "4. Trends using moving averages - Do shares tend to increase in the long term?<br />\n",
+    "4. Trends using moving averages - Do share prices tend to increase in the long term?<br />\n",
     "5. Stock Returns & Volatility - for Annualized & Daily Returns<br />\n",
     "6. Correlation<br />\n",
     "\n",
@@ -1997,11 +1997,11 @@
    "source": [
     "# Conclusion - What Should I Invest In?\n",
     "\n",
-    "Due that the 4 ETFs have low volatility, favorable trend patterns (upward - increasing value as time passes), & overrall low risk / great return ratio, any of these stocks would be worth buying and holding for many years. The only exception would be IWD. The reason being that it has the highest expense ratio among the 4 ETFs, despite having slightly better returns - on the long term, a high expense ratio is an important variable to keep in mind as as a passive investor looking for long-term growth, because it adds up throughout the years. IWD would be a good investment for a short period of time.\n",
+    "Due that the 4 ETFs have low volatility, favorable trend patterns (upward - increasing value as time passes), & overall low risk / great return ratio, any of these stocks would be worth buying and holding for many years. The only exception would be IWD. The reason being that it has the highest expense ratio among the 4 ETFs, despite having slightly better returns - on the long term, a high expense ratio is an important variable to keep in mind as as a passive investor looking for long-term growth, because it adds up throughout the years. IWD would be a good investment for a short period of time.\n",
     "\n",
     "As we noticed on the Market Cap graph, SCHD has the best performance on the long term compared to VYM (2nd) & DGRO (3rd). Remember that SCHD, VYM & DGRO are dividend ETFs, and although DGRO is the least volatile and hence it has the least amount of risk, SCHD is currently (as in December 2023) a better investment as best performance (Market Cap) translates into a higher dividend yield. However, it is possible that in the future DGRO outperforms both SCHD & VYM, however historical data doesn't reflect that yet, maybe it will in a couple of years. Note that the 3 previously mentioned Dividend ETFs have low expense-ratios, which is essential for 'buying & holding' strategies.\n",
     "\n",
-    "Note that when it comes to trending directions, since these 4 ETFs are highly correlated, this will move upward or downward depending on the economy (meaning that if there's a downturn - all of these will fall at the same time)."
+    "Note that when it comes to trending directions, since these 4 ETFs are highly correlated, these will move upward or downward depending on the economy (meaning that if there's a downturn - all of these will fall at the same time)."
    ]
   },
   {
