--- a/Part3-Large_Growth_Fund_Category-Financial_Analysis.ipynb
+++ b/Part3-Large_Growth_Fund_Category-Financial_Analysis.ipynb
@@ -19,7 +19,7 @@
     "1. Average volume of shares or index funds' units traded with respect to time<br />\n",
     "2. Highest/Lowest/Open index fund prices traded with respect to time<br />\n",
     "3. Market Capitalization<br />\n",
-    "4. Trends using moving averages - Do shares tend to increase in the long term?<br />\n",
+    "4. Trends using moving averages - Do share prices tend to increase in the long term?<br />\n",
     "5. Stock Returns & Volatility - for Annualized & Daily Returns<br />\n",
     "6. Correlation<br />\n",
     "\n",
@@ -2010,7 +2010,7 @@
     "\n",
     "In theory, QQQ & VUG should be the only options as these are the only that correlate positively between prices and volume, hence, you may at least get a 'hint' of the ETFs' outcome by looking at the trading volume, however, it is still bad strategy to only rely on positive correlation to make an investment decision. QQQ should be the most convenient ETF to hold, however, it has a high expense ratio of .20% which is high for long-term / passive investors. The next best choice should be VUG as it has an expense ratio of 0.04%. For the record, IWF & IVW have expense ratios of 0.19% & 0.18%. \n",
     "\n",
-    "Note that when it comes to trending directions, since these 4 ETFs are highly correlated, this will move upward or downward depending on the economy (meaning that if there's a downturn - all of these will fall at the same time)."
+    "Note that when it comes to trending directions, since these 4 ETFs are highly correlated, these will move upward or downward depending on the economy (meaning that if there's a downturn - all of these will fall at the same time)."
    ]
   },
   {
